Upload image file - file to larger error.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
   <string name="login_failure_message">Unable to sign in with the provided credentials</string>
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
-  <string name="title_of_image">Title of image</string>
-  <string name="description_of_image">Description of image</string>
-  <string name="upload_properties">Upload Properties</string>
+  <string name="upload_properties_title">Upload Properties</string>
+  <string name="image_title_hint">Title of image</string>
+  <string name="image_description_hint">Description of image</string>
 </resources>
