--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
   <string name="upload_properties_title">Upload Properties</string>
   <string name="image_title_hint">Title of image</string>
   <string name="image_description_hint">Description of image</string>
+  <string name="sign_out">Sign out</string>
 </resources>
