Images display in progress.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="action_settings">Settings</string>
   <!-- Strings used for fragments for navigation -->
   <string name="gallery_fragment_label">Gallery Fragment</string>
-  <string name="second_fragment_label">Second Fragment</string>
+  <string name="image_fragment_label">Image Fragment</string>
   <string name="next">Next</string>
   <string name="previous">Previous</string>
 
@@ -24,4 +24,6 @@
   <string name="sign_out">Sign out</string>
   <string name="gallery_title">Title</string>
   <string name="description">Description</string>
+  <string name="image_title">Image Title</string>
+  <string name="image_description">Image Description</string>
 </resources>
