Added image detail dialog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,10 @@
   <string name="image_title">Image Title</string>
   <string name="image_description">Image Description</string>
   <string name="gallery_title_in_image">Gallery Title In Image</string>
+  <string name="image_detail_description">Image Detail Description</string>
+  <string name="image_id">Image Id</string>
+  <string name="image_type">Image Type</string>
+  <string name="image_url">Image URL</string>
+  <string name="date_time">Date Time</string>
+  <string name="gallery_image">Gallery Image</string>
 </resources>
